--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "@prisma/client": "4.14.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
+    "instead": "1.0.3",
     "zod": "3.21.4"
   }
 }
