--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir test/unit",
+    "test:watch": "vitest --dir test/unit",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir test/e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -25,6 +29,7 @@
     "@vitest/coverage-c8": "0.31.1",
     "@vitest/ui": "0.31.1",
     "eslint": "8.40.0",
+    "npm-run-all": "4.1.5",
     "prisma": "4.14.0",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
