--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.1.3",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.5",
     "@typescript-eslint/parser": "5.59.5",
     "@vitest/coverage-c8": "0.31.1",
@@ -31,6 +32,7 @@
     "eslint": "8.40.0",
     "npm-run-all": "4.1.5",
     "prisma": "4.14.0",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.0.4",
