--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 NODE_ENV=dev
+
+# Database
+DATABASE_USER=postgres
+DATABASE_PASS=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=50432
+DATABASE_NAME=projeto-final-web
+
+DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
+
+# Authenticate
 JWT_SECRET=nodeignite03
-DATABASE_URL="postgresql://postgres:postgres@localhost:50432/nodejs-solid?schema=public"
