--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest run --dir test/unit",
+    "test": "vitest",
     "test:watch": "vitest --dir test/unit",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir test/e2e",
